--- a/templates/std/linkedlist.html
+++ b/templates/std/linkedlist.html
@@ -60,7 +60,7 @@
     
     <h2>Exemples</h2>
     <div class="io">
-        <div><code><pre><span class="code-violet">let</span> cities <span class="code-red">=</span> <span class="code-violet">new</span> list&lt;str&gt;
+        <div><code><pre><span class="code-violet">let</span> cities <span class="code-red">=</span> <span class="code-violet">new</span> linkedlist&lt;str&gt;
 cities.<span class="code-blue">add</span>(<span class="code-green">"Paris"</span>)
 cities.<span class="code-blue">add</span>(<span class="code-green">"New York"</span>)
 cities.<span class="code-blue">add</span>(<span class="code-green">"London"</span>)
